--- a/templates/admin/site_add.html
+++ b/templates/admin/site_add.html
@@ -32,33 +32,38 @@
 		</div>
 	</form>
 
-	<div id="upload-error" style="margin-top: 10px; display:none" class="alert alert-danger" role="status"></div>
+	<a href='javascript:void(0);' id="toggleContainer" onclick="toggleContainer();">Upload a file ⇊</a>
+		
+	<div id="hiddenContainer" style="display:none">
 
-	<form enctype="multipart/form-data" method="post" id="direct-upload">
-		<label for="file">Upload file</label>
-		<input type="file" id="file" name="file" placeholder="Choose a file" required>
-
-		{{ .csrfField }}
-
-		<div class="button-group">
-			<button name="action" value="upload">Upload</button>
-		</div>
-	</form>
-
-	<table id="uploaded-files" class="table" style="display:none">
-		<thead>
-			<tr>
-				<th>Filename</th>
-				<th>Link</th>
-				<th>ContentType</th>
-				<th>Size</th>
-			</tr>
-		</thead>
-
-		<tbody>
-
-		</tbody>
-	</table>
+		<div id="upload-error" style="margin-top: 10px; display:none" class="alert alert-danger" role="status"></div>
+	
+		<form enctype="multipart/form-data" method="post" id="direct-upload">
+			<label for="file">Upload file</label>
+			<input type="file" id="file" name="file" placeholder="Choose a file" required>
+	
+			{{ .csrfField }}
+	
+			<div class="button-group">
+				<button name="action" value="upload">Upload</button>
+			</div>
+		</form>
+	
+		<table id="uploaded-files" class="table" style="display:none">
+			<thead>
+				<tr>
+					<th>Filename</th>
+					<th>Link</th>
+					<th>ContentType</th>
+					<th>Size</th>
+				</tr>
+			</thead>
+	
+			<tbody>
+	
+			</tbody>
+		</table>
+	</div>
 </main>
 
 {{template "admin/footer" .}}
