remove extra p tags from teaser

--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -19,7 +19,7 @@
 					<h2 class="article_link">{{.Headline}}</h2>
 					<p class="article_info">written by {{.Author.DisplayName}} on {{.PublishedOn.Time | FormatDate}}</p>
 
-					<p>{{.Teaser | ParseMarkdown}}</p>
+					{{.Teaser | ParseMarkdown}}
 
 					{{.Content | ParseMarkdown}}
 
